--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-codemirror2": "7.2.1",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
-    "react-scripts": "5.0.0",
-    "react-split": "2.0.14"
+    "react-scripts": "5.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
